--- a/src/home.html
+++ b/src/home.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NFT Lander</title>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
   </head>
   <body>
     <header>
@@ -15,9 +17,12 @@
         <a href="./home.html">Home</a>
         <span class="nav-current-page">Upload</span>
         <a href="./gallery.html">Gallery</a>
+        <a href="# btn-login">Connect Wallet</a>
+         <a href="# btn-logout">Logout</a>
       </nav>
     </header>
         
+    <script type="text/javascript" src="./main.js"></script>
     <script type="module" src="./js/upload.js"></script>
   </body>
 </html>
